[gd_scene load_steps=4 format=3 uid="uid://dsw4a5unh172u"]

[ext_resource type="Script" path="res://scripts/track.gd" id="1_v6ovy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uu8dd"]
radius = 212.0
height = 1074.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8sbl"]
size = Vector2(117, 123)

[node name="Track0" type="Node2D"]
script = ExtResource("1_v6ovy")

[node name="InnerTrack" type="Area2D" parent="."]
position = Vector2(574, 320)
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InnerTrack"]
polygon = PackedVector2Array(-293, 142, 287, 142, 325, 133, 351, 125, 376, 112, 396, 96, 421, 69, 436, 45, 442, 22, 445, 1, 440, -24, 429, -51, 416, -71, 401, -87, 384, -100, 360, -115, 335, -125, 303, -132, 269, -136, -286, -136, -308, -133, -332, -128, -360, -117, -383, -105, -399, -93, -415, -77, -427, -62, -437, -46, -445, -17, -447, 2, -445, 24, -437, 48, -428, 65, -416, 81, -398, 97, -378, 111, -357, 122, -335, 131, -310, 137)

[node name="OuterTrack" type="Area2D" parent="."]
position = Vector2(573, 322)
collision_mask = 2

[node name="OuterShape" type="CollisionShape2D" parent="OuterTrack"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uu8dd")

[node name="WinArea" type="Area2D" parent="."]
position = Vector2(332, 499)
collision_mask = 2

[node name="WinShape" type="CollisionShape2D" parent="WinArea"]
shape = SubResource("RectangleShape2D_s8sbl")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(304, 504)
